# web-bg

./: Cargo.toml  LICENSE-MIT  README.md  about.hbs  about.toml  debug.html  deny.toml  index.html  rustfmt.toml
.github/: dependabot.yaml
.github/workflows/: audit.yaml  build.yaml  ci.yaml
assets/maze/: ATTRIBUTION.md
src/: events.rs  main.rs  util.rs
src/asteroids/: mod.rs
src/maze/: food.rs  maze.rs  mod.rs  player.rs
