[package]
name = "web-bg"
version = "0.1.0"
edition = "2021"
publish = false
authors = ["janm-dev"]
description = "Interactive website backgrounds in Rust with Bevy."
license = "MIT OR Apache-2.0"
repository = "https://github.com/janm-dev/web-bg"

[features]
default = [
	"asteroids",
	"lander",
	"mapman",
	"mapgen",
	"maze",
	"portoom",
	"racecar",
]
dynamic = ["bevy/dynamic_linking"]
debug = [
	"dep:tracing",
	"dep:bevy-debug-text-overlay",
	"dep:bevy_screen_diagnostics",
]
profile = [
	"debug",
	"bevy/trace",
	"bevy/trace_tracy",
	"dep:tracing-tracy",
	"dep:tracy-client",
	"dep:tracy-client-sys",
]
console_log = [
	"dep:tracing",
	"dep:tracing-core",
	"dep:tracing-subscriber",
	"dep:tracing-web",
]
asteroids = []
lander = []
mapgen = []
mapman = []
maze = []
portoom = []
racecar = []

[dependencies]
tracing = { version = "0.1.40", optional = true }
tracing-tracy = { version = "0.11.3", optional = true }
tracy-client = { version = "0.17.4", optional = true }
tracy-client-sys = { version = "0.24.1", optional = true }
bevy = "0.13.2"
bevy-debug-text-overlay = { version = "8.1.0", optional = true }
bevy_embedded_assets = "0.10.2"
turborand = { version = "0.10.1", features = ["atomic"] }
bevy_screen_diagnostics = { version = "0.5.0", optional = true }
image = "0.25.3"

[target.'cfg(target_arch = "wasm32")'.dependencies]
instant = { version = "0.1", features = ["wasm-bindgen"] }
tracing-core = { version = "0.1.32", optional = true }
tracing-subscriber = { version = "0.3.18", features = [
	"registry",
], optional = true }
tracing-web = { version = "0.1.3", optional = true }
web-sys = { version = "0.3.72", features = [
	"console",
	"Window",
	"Performance",
	"Event",
	"EventTarget",
	"CustomEvent",
	"CustomEventInit",
] }
wasm-bindgen = "0.2.95"

[target.'cfg(all(target_arch = "wasm32", not(target_feature = "atomics")))'.dependencies]
rlsf = "0.2.1"

[profile.dev]
lto = false
incremental = true
debug = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
incremental = false
codegen-units = 1
strip = false
debug = true
split-debuginfo = "packed"
opt-level = 3

[profile.release-wasm]
inherits = "release"
