[package]
name = "web-bg"
version = "0.1.0"
edition = "2024"
publish = false
authors = ["janm-dev"]
description = "Interactive website backgrounds in Rust with Bevy."
license = "MIT OR Apache-2.0"
repository = "https://github.com/janm-dev/web-bg"

[features]
default = [
	"asteroids",
	"lander",
	"mapman",
	"mapgen",
	"maze",
	"portoom",
	"racecar",
]
dynamic = ["bevy/dynamic_linking"]
debug = ["dep:tracing", "dep:bevy_screen_diagnostics"]
profile = [
	"debug",
	"bevy/trace",
	"bevy/trace_tracy",
	"dep:tracing-tracy",
	"dep:tracy-client",
	"dep:tracy-client-sys",
]
console_log = [
	"dep:tracing",
	"dep:tracing-core",
	"dep:tracing-subscriber",
	"dep:tracing-web",
]
asteroids = []
lander = []
mapgen = []
mapman = []
maze = []
portoom = []
racecar = []

[dependencies]
bevy = "0.16.1"
bevy_embedded_assets = "0.13.0"
bevy_light_2d = "0.7.0"
bevy_screen_diagnostics = { version = "0.8.1", optional = true }
image = "0.25.8"
tracing = { version = "0.1.40", optional = true }
tracing-tracy = { version = "0.11.3", optional = true }
tracy-client = { version = "0.18.2", optional = true }
tracy-client-sys = { version = "0.26.1", optional = true }
turborand = { version = "0.10.1", features = ["atomic"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
getrandom = { version = "0.3.3", features = ["wasm_js"] }
instant = { version = "0.1", features = ["wasm-bindgen"] }
tracing-core = { version = "0.1.32", optional = true }
tracing-subscriber = { version = "0.3.20", features = [
	"registry",
], optional = true }
tracing-web = { version = "0.1.3", optional = true }
wasm-bindgen = "0.2.95"
web-sys = { version = "0.3.72", features = [
	"console",
	"Window",
	"Performance",
	"Event",
	"EventTarget",
	"CustomEvent",
	"CustomEventInit",
] }
web-time = "1.1.0"

[target.'cfg(all(target_arch = "wasm32", not(target_feature = "atomics")))'.dependencies]
rlsf = "0.2.1"

[profile.dev]
lto = false
incremental = true
debug = true
opt-level = 0

[profile.dev.package."*"]
opt-level = 3

[profile.release]
lto = "thin"
incremental = false
codegen-units = 1
strip = false
debug = true
split-debuginfo = "packed"
opt-level = 3

[profile.release-wasm]
inherits = "release"
